kubernetes/app-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autodealership-deploy
  namespace: autodealership
  labels:
    app: auto-app
spec:
  selector:
    matchLabels:
      app:  auto-app
  replicas: 3
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  auto-app
    spec:
      nodeSelector:
        kubernetes.io/os: windows
      terminationGracePeriodSeconds: 30
      containers:
      - name: autodealership
        image: gorgilazarev3/autodealership:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 250m
            memory: 250Mi
        ports:
        - containerPort: 80
          name:  auto-app
        volumeMounts:
        - name: source
          mountPath: c:\source
      volumes:
      - name: source
        hostPath:
          path: .
          type: DirectoryOrCreate
      restartPolicy: Always
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: autodealership-svc
  namespace: autodealership
  annotations:
    cloud.google.com/neg: '{"ingress": false}' # Disable NEG
spec:
  selector:
    app: auto-app
  type: LoadBalancer
  ports:
  - name: autodealership-svc
    protocol: TCP
    port: 80
    targetPort: 80
---
