kubernetes/old-deploy-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: autodealership
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      terminationGracePeriodSeconds: 30
      nodeSelector:
        kubernetes.io/os: windows
      containers:
      - name: mssql
        image: octopusdeploy/mssql-server-windows-express
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssql-data
          mountPath: c:\db
      volumes:
      - name: mssql-data
        persistentVolumeClaim:
          claimName: mssql-data-pvc	  
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: autodealership
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
